<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" > 
     <item  
           android:id="@+id/myLocationx"
         
           android:title="@string/myLocationItem"
             android:icon="@drawable/item_location"
           />
      <item 
           android:id="@+id/myAlarmLocationx"
           android:icon="@drawable/item_alarm"
           android:title="@string/myAlarmItem"
           />
       <item 
           android:id="@+id/allLocationsx"  
           android:icon="@drawable/item_configuration"
           android:title="@string/allLocationItem"
         />  
     <item 
           android:id="@+id/changemapx"
           android:icon="@drawable/satellite_right"
           android:title="@string/changeMapItem"
         />  
      <item 
           android:id="@+id/lanzarAcercaDex"  
           android:icon="@drawable/item_configuration"
           android:title="@string/ConfigurationItem"
          />  
       
 

</menu>

 